--- a/views/my-app/src/app.html
+++ b/views/my-app/src/app.html
@@ -6,11 +6,11 @@
 		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials"/>
 		<link rel="mask-icon" href="/logo.svg">
 		<link rel="apple-touch-icon" sizes="512x512" href="/logo.svg">
-		<meta name="author" content="Arwana Dev Team" />
+		<meta name="author" content="bladerlaiga" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<meta name="application-name" content="Ada Ikan" />
+		<meta name="application-name" content="Oke Clean" />
 		<meta name="mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-title" content="Ada Ikan" />
+		<meta name="apple-mobile-web-app-title" content="Oke Clean" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="#00796B">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="msapplication-starturl" content="/" />
